kubernetes/packages/00_services_admin.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: services-admin-authentication
  namespace: default
spec:
  basicAuth:
    secret: "services-admin-credentials"
