kubernetes/packages/kubernetes-dashboard.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
