kubernetes/packages/reloader.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
