kubernetes/packages/keel.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`keel.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: keel
          namespace: kube-system
          port: 9300
  tls:
    secretName: wilcard-main-domain-tls
