kubernetes/packages/kubeclarity.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubeclarity
  namespace: default
spec:
  basicAuth:
    secret: "kubeclarity"

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeclarity
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`kubeclarity.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: kubeclarity-kubeclarity
          namespace: kubeclarity
          port: 8080
      middlewares:
        - name: kubeclarity
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeclarity
